--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" rel="preload" href="./angel-favicon.png" />
+    <!-- <link rel="icon" rel="preload" href="./angel-favicon.png" /> -->
 
  <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="theme-color" content="#000000" />
@@ -34,8 +34,9 @@
 <meta name="revisit-after" content="7 days"/>
 <meta name="robots" content="index, follow"/>
 
-<link rel="preload" href="images/ange_gulf_logo.png" as="image" type="image/png" crossorigin="anonymous" />
-
+<!-- <link rel="preload" href="images/ange_gulf_logo.png" as="image" type="image/png" crossorigin="anonymous" /> -->
+<link rel="icon" href="https://www.angelgulfjobs.com/angel-favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="https://www.angelgulfjobs.com/angel-favicon.png" sizes="180x180">
 
     <!-- Newly added Links -->
 
