--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,7 @@
     <link rel="stylesheet" type="text/css" href="css/switcher.css"> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-
-    
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- <title>Angel Gulf</title> -->
   </head>
   <body>
