--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <!-- <link rel="icon" rel="preload" href="./angel-favicon.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/angel-favicon.png" />
 
  <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="theme-color" content="#000000" />
