--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Angel Gulf Jobs | Leading Overseas & Gulf Job Consultants India</title>
+    <!-- <title>Angel Gulf Jobs | Leading Overseas & Gulf Job Consultants India</title> -->
 <meta name="keywords" content="abroad job consultants, overseas job consultants, Gulf job consultants, overseas recruitment agency, Indian overseas job consultants, Gulf recruitment agency, manpower consultancy for Gulf, overseas job placement agency, best Gulf job consultancy, Gulf job consultancy in India, Gulf recruitment consultants in Mumbai"/>
-<meta name="description" content="Angel Gulf Jobs is India’s trusted overseas job consultants and Gulf recruitment agency, offering verified job opportunities, skilled hiring, and ethical recruitment solutions."/>
+<!-- <meta name="description" content="Angel Gulf Jobs is India’s trusted overseas job consultants and Gulf recruitment agency, offering verified job opportunities, skilled hiring, and ethical recruitment solutions."/> -->
 <!-- <link rel="canonical" href="https://www.angelgulfjobs.com/"/>    -->
 <meta name="revisit-after" content="7 days"/>
 <meta name="robots" content="index, follow"/>
